# CourseWork2

./: README.md  main.py  pyproject.toml
data/: user_vacancies.json  vacancies.json
src/: abstract_api.py  abstract_storage.py  filters.py  hh_api.py  json_storage.py  vacancy.py
tests/: test_api.py  test_filters.py  test_storage.py  test_vacancy.py
