[tool.poetry]
name = "coursework2"
version = "0.1.0"
description = ""
authors = ["aleksei <230kos@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
requests = "^2.31.0"
python-dotenv = "^1.0.0"
pytest = "^8.3.5"

[tool.poetry.group.lint.dependencies]
flake8 = "^7.1.2"
mypy = "^1.15.0"
black = "^25.1.0"
isort = "^6.0.1"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
pytest-cov = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
disallow_untyped_defs = true
no_implicit_optional = true
warn_return_any = true
exclude = 'venv'

[tool.black]
# максимальная длина строки
line_length = 119
exclude = '.git'

[tool.isort]
# максимальная длина строки
line_length = 119

